# Custom-pipeline---synthetic-data-generation-pipeline

./: .env.example  .gitignore  README.md  main.py  pyproject.toml  start.py
app/: main.py
app/agents/: advanced_metrics.py  answer_generator.py  deduplicator.py  document_processor.py  knowledge_graph.py  multihop_generator.py  quality_validator.py  question_generator.py  supervisor.py
app/api/: routes.py
app/core/: config.py  cost_tracker.py  experiments.py  graph_state.py  llm.py  logging_config.py  personas.py  progress.py
app/models/: llm_responses.py  schemas.py
data/: Cardivex_Prescribing_Information.docx  Document_1_Drug_Product_Monograph.docx  Document_2_Clinical_Development_Report.docx  Onboarding_Feedback_AI_Engineer.docx
frontend/: app.js  app.js.bak  index.html  index.html.bak  styles.css  styles.css.bak
